--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -502,6 +502,9 @@ video {
 .top-4 {
   top: 1rem;
 }
+.top-16 {
+  top: 4rem;
+}
 .-z-10 {
   z-index: -10;
 }
@@ -514,12 +517,31 @@ video {
 .-order-1 {
   order: -1;
 }
+.col-span-4 {
+  grid-column: span 4 / span 4;
+}
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
+.row-span-2 {
+  grid-row: span 2 / span 2;
+}
 .m-0 {
   margin: 0px;
+}
+.m-\[0\.5rem\] {
+  margin: 0.5rem;
+}
+.m-\[6px\] {
+  margin: 6px;
 }
 .-mx-small {
   margin-left: calc(var(--small-padding) * -1);
   margin-right: calc(var(--small-padding) * -1);
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -530,9 +552,6 @@ video {
 }
 .mb-0 {
   margin-bottom: 0px;
-}
-.mb-1 {
-  margin-bottom: 0.25rem;
 }
 .mb-16 {
   margin-bottom: 4rem;
@@ -585,6 +604,12 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.mb-\[1em\] {
+  margin-bottom: 1em;
+}
+.mb-\[\.5em\] {
+  margin-bottom: .5em;
+}
 .block {
   display: block;
 }
@@ -606,6 +631,12 @@ video {
 .hidden {
   display: none;
 }
+.aspect-square {
+  aspect-ratio: 1 / 1;
+}
+.h-16 {
+  height: 4rem;
+}
 .h-\[50vh\] {
   height: 50vh;
 }
@@ -615,11 +646,17 @@ video {
 .min-h-full {
   min-height: 100%;
 }
+.w-20 {
+  width: 5rem;
+}
 .w-4\/5 {
   width: 80%;
 }
 .w-\[initial\] {
   width: initial;
+}
+.w-auto {
+  width: auto;
 }
 .w-full {
   width: 100%;
@@ -628,9 +665,18 @@ video {
   width: -moz-min-content;
   width: min-content;
 }
+.w-32 {
+  width: 8rem;
+}
 .min-w-min {
   min-width: -moz-min-content;
   min-width: min-content;
+}
+.max-w-4xl {
+  max-width: 56rem;
+}
+.max-w-\[40rem\] {
+  max-width: 40rem;
 }
 .max-w-screen-md {
   max-width: 768px;
@@ -641,17 +687,29 @@ video {
 .flex-1 {
   flex: 1 1 0%;
 }
+.flex-shrink {
+  flex-shrink: 1;
+}
 .shrink-0 {
   flex-shrink: 0;
 }
 .grow {
   flex-grow: 1;
 }
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .resize-none {
   resize: none;
 }
 .resize {
   resize: both;
+}
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-10 {
+  grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -692,17 +750,23 @@ video {
 .justify-stretch {
   justify-content: stretch;
 }
+.gap-12 {
+  gap: 3rem;
+}
+.gap-2 {
+  gap: 0.5rem;
+}
 .gap-4 {
   gap: 1rem;
 }
 .gap-8 {
   gap: 2rem;
 }
+.gap-\[0\.5rem\] {
+  gap: 0.5rem;
+}
 .gap-\[12px\] {
   gap: 12px;
-}
-.gap-small {
-  gap: var(--small-padding);
 }
 .self-start {
   align-self: flex-start;
@@ -728,12 +792,11 @@ video {
 .border-2 {
   border-width: 2px;
 }
-.border-y {
-  border-top-width: 1px;
-  border-bottom-width: 1px;
-}
 .border-r {
   border-right-width: 1px;
+}
+.border-r-0 {
+  border-right-width: 0px;
 }
 .border-solid {
   border-style: solid;
@@ -757,6 +820,10 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -778,6 +845,12 @@ video {
 }
 .p-0 {
   padding: 0px;
+}
+.p-12 {
+  padding: 3rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .p-4 {
   padding: 1rem;
@@ -1004,6 +1077,11 @@ body ul{
   margin-left: 1rem;
 }
 
+.bg-base{
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+
   #animated-text {
     display: inline-block;
     white-space: pre-wrap;
@@ -1109,6 +1187,9 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 text-transform: uppercase;
+}
+footer h3{
+  font-size: 1.3rem;
 }
 
 
@@ -1632,9 +1713,6 @@ float: right
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 @media (min-width: 640px) {
-  .sm\:flex {
-    display: flex;
-  }
   .sm\:grid {
     display: grid;
   }
@@ -1659,6 +1737,18 @@ float: right
   }
 }
 @media (min-width: 768px) {
+  .md\:order-1 {
+    order: 1;
+  }
+  .md\:order-2 {
+    order: 2;
+  }
+  .md\:order-3 {
+    order: 3;
+  }
+  .md\:order-4 {
+    order: 4;
+  }
   .md\:order-\[0\] {
     order: 0;
   }
@@ -1671,8 +1761,20 @@ float: right
   .md\:flex {
     display: flex;
   }
+  .md\:max-h-\[50vh\] {
+    max-height: 50vh;
+  }
+  .md\:min-h-\[25vw\] {
+    min-height: 25vw;
+  }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .md\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+  .md\:flex-row {
+    flex-direction: row;
   }
   .md\:overflow-auto {
     overflow: auto;
@@ -1691,6 +1793,9 @@ float: right
 @media (min-width: 1024px) {
   .lg\:block {
     display: block;
+  }
+  .lg\:flex {
+    display: flex;
   }
   .lg\:hidden {
     display: none;
