--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -499,11 +499,11 @@ video {
 .top-12 {
   top: 3rem;
 }
-.top-4 {
-  top: 1rem;
-}
 .top-16 {
   top: 4rem;
+}
+.top-4 {
+  top: 1rem;
 }
 .-z-10 {
   z-index: -10;
@@ -565,6 +565,9 @@ video {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.mb-\[\.5em\] {
+  margin-bottom: .5em;
+}
 .mb-\[60px\] {
   margin-bottom: 60px;
 }
@@ -604,11 +607,8 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
-.mb-\[1em\] {
-  margin-bottom: 1em;
-}
-.mb-\[\.5em\] {
-  margin-bottom: .5em;
+.mt-vert {
+  margin-top: var(--vert-gap);
 }
 .block {
   display: block;
@@ -646,8 +646,8 @@ video {
 .min-h-full {
   min-height: 100%;
 }
-.w-20 {
-  width: 5rem;
+.w-32 {
+  width: 8rem;
 }
 .w-4\/5 {
   width: 80%;
@@ -665,9 +665,6 @@ video {
   width: -moz-min-content;
   width: min-content;
 }
-.w-32 {
-  width: 8rem;
-}
 .min-w-min {
   min-width: -moz-min-content;
   min-width: min-content;
@@ -677,6 +674,9 @@ video {
 }
 .max-w-\[40rem\] {
   max-width: 40rem;
+}
+.max-w-full {
+  max-width: 100%;
 }
 .max-w-screen-md {
   max-width: 768px;
@@ -927,6 +927,9 @@ video {
 .pb-small {
   padding-bottom: var(--small-padding);
 }
+.pr-16 {
+  padding-right: 4rem;
+}
 .pt-0 {
   padding-top: 0px;
 }
@@ -968,6 +971,9 @@ video {
 .shadow-black {
   --tw-shadow-color: #000;
   --tw-shadow: var(--tw-shadow-colored);
+}
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -1758,9 +1764,6 @@ float: right
   .md\:block {
     display: block;
   }
-  .md\:flex {
-    display: flex;
-  }
   .md\:max-h-\[50vh\] {
     max-height: 50vh;
   }
@@ -1791,9 +1794,6 @@ float: right
   }
 }
 @media (min-width: 1024px) {
-  .lg\:block {
-    display: block;
-  }
   .lg\:flex {
     display: flex;
   }
