--- a/_includes/block/text-block.html
+++ b/_includes/block/text-block.html
@@ -8,7 +8,7 @@
           text-center
       {% else %}
       {% endcase %}"
-       {% if block.max-width %} style="max-width: {{block.max-width}} "{% endif %}>
+       {% if block.content-max-width %} style="max-width: {{block.content-max-width}} "{% endif %}>
           <div class="">
             {% if noH1 == true %}
             {{block.block-content-html | replace: 'h2','h1'}}
