--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,78 +94,84 @@
 
 <body>
   <div class="scheme-header absolute w-full top-0 z-50" id="header">
-  <header>
-    <div class="max-width flex justify-center items-center py-4 relative">
+  <header class="bg-base lg:!bg-transparent text-white">
+    <div class="max-width flex justify-center items-center py-4 relative z-[999]">
       <div class="text-center pt-8">
           <h1 class="mb-0 leading-none text-4xl">REGENT</h1>
           <h3 class="text-sm mt-0">BALI CANGGU</h3>
       </div>
       <a href="https://bookings.sukhavatibali.com/en/product/panchakarma" class="absolute top-16 right-0 button ml-[15px]">Book Now</a>
-    </div>
-      <nav class="max-width justify-between hidden lg:flex right-0 top-0 shrink-0">
-
-        {% assign noH1 = true %}
-        {% for link in site.data.navigation.header_links %}
-        <span 
-        class="text-left inline-block drop-finder p-[15px]
-          {% if link.sub_links %}
-            relative
-          {% endif %}
-          ">
-              {% if link.link %}
-              <a href="{{link.link}}">
-              {% else %}
-              <span class="unlinked">
-              {% endif %}
-                {{link.text}}
-              {% unless link.link %}
-              </span>
-              {% else %}
-              </a>
-              {% endunless %}
-
-          {% if link.sub_links %} 
-              <div class="absolute left-0 top-12 z-10 drop-down color-set min-w-min hidden">
-                {% for sub-link in link.sub_links %}
-                <a class="block whitespace-nowrap p-4" href="{{sub-link.link}}">{{sub-link.text}}</a>
-                {% endfor %}
-              </div>
-            {% endif %}
-        </span>
-        {% endfor %}
-
-        </nav>
       <div class="lg:hidden">
         <div class="burger-button">
           <span class="burger-top"></span>
           <span class="burger-middle"></span>
           <span class="burger-bottom"></span>
       </div>
-       <div class="burger-menu color-set">
+    </div>
+    </div>
+    <nav class="max-width justify-between hidden lg:flex right-0 top-0 shrink-0">
 
-        <a href="/">
+      {% assign noH1 = true %}
+      {% for link in site.data.navigation.header_links %}
+      <span 
+      class="text-left inline-block drop-finder p-[15px]
+        {% if link.sub_links %}
+          relative
+        {% endif %}
+        ">
+            {% if link.link %}
+            <a href="{{link.link}}">
+            {% else %}
+            <span class="unlinked">
+            {% endif %}
+              {{link.text}}
+            {% unless link.link %}
+            </span>
+            {% else %}
+            </a>
+            {% endunless %}
+
+        {% if link.sub_links %} 
+            <div class="absolute left-0 top-12 z-10 drop-down color-set min-w-min hidden">
+              {% for sub-link in link.sub_links %}
+              <a class="block whitespace-nowrap p-4" href="{{sub-link.link}}">{{sub-link.text}}</a>
+              {% endfor %}
+            </div>
+          {% endif %}
+      </span>
+      {% endfor %}
+
+      </nav>
+      
+       <div class="burger-menu color-set lg:!hidden">
+
+        <!-- <a href="/">
           <img class="mix-blend-multiply" style="max-width: min({{site.data.navigation.header_logo_width}}, 100%)" src="{{site.data.navigation.logo_image}}" alt="{{site.data.navigation.logo_alt}}">
         </a>
-        <a href="https://bookings.sukhavatibali.com/en/product/panchakarma" class="button !inline-block ml-[15px]">Book Now</a>
+        <a href="https://bookings.sukhavatibali.com/en/product/panchakarma" class="button !inline-block ml-[15px]">Book Now</a> -->
         {% for link in site.data.navigation.header_links %}
 
-        <a class="main-link" href="{{link.link}}">{{link.text}}</a>
+        
         {% if link.sub_links %}
-          <div class="ml-small">
-            {% for sub-link in link.sub_links %}
-              <a class="block whitespace-nowrap p-4" href="{{sub-link.link}}">{{sub-link.text}}</a>
-            {% endfor %}
-          </div>
+        <span class="main-link">{{link.text}} {% include svg/right-arrow.html %}</span>
+        <div class="sub-menu bg-base">
+          <span class="go-back">{% include svg/left-arrow.html %} Go back </span>
+          {% for sub-link in link.sub_links %}
+          <a class="block whitespace-nowrap p-4" href="{{sub-link.link}}">{{sub-link.text}}</a>
+          {% endfor %}
+        </div>
+        {% else %}
+        
+        <a class="main-link" href="{{link.link}}">{{link.text}}</a>
         {% endif %}
 
 
           {% endfor %}
 
+
       </div>
-      </div>
-    </div>
-  </header>
-</div>
+    </header>
+  </div>
 
 
 
@@ -261,7 +267,42 @@ addEventListener("load", (event) => {
 
 
 <script>
+
+  const burgerButton = document.querySelector('.burger-button')
+  const burgerMenu = document.querySelector('.burger-menu')
+  const burgerSecondLevelButton = burgerMenu.querySelectorAll('span.main-link')
+  const burgerSecondLevelMenus = burgerMenu.querySelectorAll('.sub-menu')
+  const burgerGoBack = burgerMenu.querySelectorAll('.go-back')
+
+
+
+  function toggleBurger() {
+    burgerButton.classList.toggle('active')
+    burgerMenu.classList.toggle('active')
+    burgerSecondLevelMenus.forEach(menu => {
+      menu.classList.remove('active')
+    })
+  }
+
+  burgerButton.addEventListener('click', ()=> {
+    toggleBurger()
+  })
+
     console.log('worked here')
+
+  
+console.log(burgerButton,burgerMenu,burgerSecondLevelButton,burgerGoBack)
+
+  burgerSecondLevelButton.forEach(button => {
+    button.addEventListener('click', () => {
+      button.nextElementSibling.classList.add('active')
+    })
+  })
+    burgerGoBack.forEach(button => {
+    button.addEventListener('click', () => {
+      button.parentElement.classList.remove('active')
+    })
+  })
 
 // universal functions
 
