--- a/_includes/block/split-banner-slider.html
+++ b/_includes/block/split-banner-slider.html
@@ -3,7 +3,7 @@
 ">
 
 
-      <div class="max-width bg-base relative z-10 grid gap-8 justify-center items-center grid-cols-10">
+      <div class="max-width bg-base relative z-10 grid gap-8 justify-center items-center md:grid-cols-10">
 
       <div class=" gallery col-span-6 p-8 {% if block.carousel.desktop-image-position == 'right' %} order-3 {% endif %}">
         <div class="aspect-square relative">
