--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,11 +490,20 @@ video {
 .left-0 {
   left: 0px;
 }
+.left-\[20vw\] {
+  left: 20vw;
+}
+.left-side {
+  left: var(--side-gap);
+}
 .right-0 {
   right: 0px;
 }
 .right-4 {
   right: 1rem;
+}
+.right-side {
+  right: var(--side-gap);
 }
 .top-0 {
   top: 0px;
@@ -522,9 +531,6 @@ video {
 }
 .-order-1 {
   order: -1;
-}
-.order-2 {
-  order: 2;
 }
 .order-3 {
   order: 3;
@@ -670,8 +676,8 @@ video {
 .w-4\/5 {
   width: 80%;
 }
-.w-\[120\%\] {
-  width: 120%;
+.w-\[90\%\] {
+  width: 90%;
 }
 .w-\[initial\] {
   width: initial;
@@ -686,15 +692,21 @@ video {
   width: -moz-min-content;
   width: min-content;
 }
+.w-screen {
+  width: 100vw;
+}
+.w-\[calc\(100vw_-_20vw_-_var\(--side-gap\)\)\] {
+  width: calc(100vw - 20vw - var(--side-gap));
+}
+.w-\[80\%\] {
+  width: 80%;
+}
 .min-w-min {
   min-width: -moz-min-content;
   min-width: min-content;
 }
 .max-w-4xl {
   max-width: 56rem;
-}
-.max-w-\[120\%\] {
-  max-width: 120%;
 }
 .max-w-\[40rem\] {
   max-width: 40rem;
@@ -731,9 +743,6 @@ video {
 }
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-10 {
-  grid-template-columns: repeat(10, minmax(0, 1fr));
 }
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -1798,6 +1807,12 @@ float: right
   }
 }
 @media (min-width: 768px) {
+  .md\:relative {
+    position: relative;
+  }
+  .md\:inset-0 {
+    inset: 0px;
+  }
   .md\:order-1 {
     order: 1;
   }
@@ -1824,6 +1839,18 @@ float: right
   }
   .md\:min-h-\[25vw\] {
     min-height: 25vw;
+  }
+  .md\:w-\[120\%\] {
+    width: 120%;
+  }
+  .md\:w-full {
+    width: 100%;
+  }
+  .md\:max-w-\[120\%\] {
+    max-width: 120%;
+  }
+  .md\:grid-cols-10 {
+    grid-template-columns: repeat(10, minmax(0, 1fr));
   }
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
