--- a/_includes/block/contact.html
+++ b/_includes/block/contact.html
@@ -1,35 +1,35 @@
 
-<section class="">
+<section class="contact-form">
       <div class="max-width">
-          <div class="{% case block.text-alignment %}
-          {% when 'right' %}
-              text-right
-          {% when 'center' %}
-              text-center
-          {% else %}
-          {% endcase %}  pb-12 mx-auto" {% if block.max-width %} style="max-width: {{block.max-width}} "{% endif %}>
-          {% if noH1 == true %}
-          {{block.block-content-html | replace: 'h2','h1'}}
-          {% else %}
-          {{block.block-content-html}}
-          {% endif %}
-    
-          {% if block.block-content-html contains "h2" %}
-            {% assign noH1 = false %}
-          {% endif %}
+          <div class="mx-auto mb-12">
+            <h2>Get in touch</h2>
           </div>
-            <form method="post" action="/success" class="mx-auto" {% if block.form-max-width %} style="max-width: {{block.form-max-width}} "{% endif %}>
-              <input class="placeholder:text-inherit" type="text" name="name" placeholder="NAME" required>
-              <input class="placeholder:text-inherit" type="email" name="email" placeholder="EMAIL" required>
-              <input class="placeholder:text-inherit" type="tel" name="number" placeholder="NUMBER" required>
+            <form method="post" action="/success" class="mx-auto grid grid-cols-2 gap-6">
+              <div class="col-span-2">
+                <label for="question" class="uppercase">Question</label>
+                <input type="text" id="question" name="question" placeholder="I want to know about..." class="placeholder:text-inherit" required>
+              </div>
+              <div class="">
+              <label for="name" class="uppercase">Name</label>
+                <input type="text" id="name" name="name" placeholder="Your Name" class="placeholder:text-inherit" required>
+              </div>           
+              <div class="">
+                 <label for="name" class="uppercase">Email</label>
+                 <input type="text" id="Email" name="Email" placeholder="Your Email" class="placeholder:text-inherit" required>
+              </div>
 
-              <textarea class="placeholder:text-inherit resize-none" rows="4" name="message" placeholder="MESSAGE" required></textarea>
+              <div class="col-span-2">
+                <label for="message">Message</label>
+                <textarea class="placeholder:text-inherit resize-none col-span-2" rows="4" name="message" placeholder="Your Message" required></textarea>
+              </div>
             
               <!-- <input type="hidden" name="inbox_key" value="sukhavatibali"> -->
-              <input type="hidden" name="_to" value="rejuvenation@sukhavatibali.com">
+              <input type="hidden" name="_to" value="#">
               <input type="text" name="_gotcha" style="display: none;">
-            
-              <input class="border border-[currentcolor] border-solid px-5 py-2 w-min" type="submit" value="Send Message">
+            <div class="text-center scheme-dark col-span-2">
+              <input class="border border-[currentcolor] inline-block bg-base border-solid px-5 py-2 w-min" type="submit" value="Send Message">
+
+            </div>
           </form>
       </div>
     </section>
