--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,18 +96,24 @@
   <div class="scheme-header absolute w-full top-0 z-50" id="header">
   <header class="bg-base lg:!bg-transparent text-white">
     <div class="max-width flex justify-center items-center py-4 relative z-[999]">
-      <div class="text-center pt-8">
-          <h1 class="mb-0 leading-none text-4xl">REGENT</h1>
-          <h3 class="text-sm mt-0">BALI CANGGU</h3>
-      </div>
-      <a href="https://bookings.sukhavatibali.com/en/product/panchakarma" class="absolute top-16 right-0 button ml-[15px]">Book Now</a>
+      
       <div class="lg:hidden">
         <div class="burger-button">
           <span class="burger-top"></span>
           <span class="burger-middle"></span>
           <span class="burger-bottom"></span>
+        </div>
       </div>
-    </div>
+      
+      <div class="text-center pt-8">
+          <div style="width: 16rem;">
+            {% include svg/regent-Logo-SVG.html %}
+          </div>
+      </div>
+      
+      <a href="https://bookings.sukhavatibali.com/en/product/panchakarma" class="absolute top-16 right-0 button-featured ml-[15px]">Book Now</a>
+
+
     </div>
     <nav class="max-width justify-between hidden lg:flex right-0 top-0 shrink-0">
 
