--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,8 +610,8 @@ video {
 .ml-auto {
   margin-left: auto;
 }
-.ml-full-side {
-  margin-left: var(--max-width-side-padding);
+.ml-side {
+  margin-left: var(--side-gap);
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -619,11 +619,11 @@ video {
 .mr-auto {
   margin-right: auto;
 }
-.mr-full-side {
-  margin-right: var(--max-width-side-padding);
+.mr-side {
+  margin-right: var(--side-gap);
 }
-.mt-0 {
-  margin-top: 0px;
+.mt-16 {
+  margin-top: 4rem;
 }
 .mt-6 {
   margin-top: 1.5rem;
@@ -786,6 +786,9 @@ video {
 .gap-12 {
   gap: 3rem;
 }
+.gap-16 {
+  gap: 4rem;
+}
 .gap-2 {
   gap: 0.5rem;
 }
@@ -845,10 +848,6 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(193 196 179 / var(--tw-border-opacity));
 }
-.border-\[\#c1c4b3\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(193 196 179 / var(--tw-border-opacity));
-}
 .border-\[currentcolor\] {
   border-color: currentcolor;
 }
@@ -882,17 +881,11 @@ video {
 .p-0 {
   padding: 0px;
 }
-.p-12 {
-  padding: 3rem;
-}
 .p-2 {
   padding: 0.5rem;
 }
 .p-4 {
   padding: 1rem;
-}
-.p-6 {
-  padding: 1.5rem;
 }
 .p-8 {
   padding: 2rem;
@@ -914,10 +907,6 @@ video {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
-}
-.px-full-side {
-  padding-left: var(--max-width-side-padding);
-  padding-right: var(--max-width-side-padding);
 }
 .px-side {
   padding-left: var(--side-gap);
@@ -942,10 +931,6 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
-}
-.py-small {
-  padding-top: var(--small-padding);
-  padding-bottom: var(--small-padding);
 }
 .py-vert {
   padding-top: var(--vert-gap);
@@ -981,10 +966,6 @@ video {
 .text-right {
   text-align: right;
 }
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 1;
-}
 .text-sm {
   font-size: 0.875rem;;
   line-height: 1.2;
@@ -997,9 +978,6 @@ video {
 }
 .leading-\[1\.7\] {
   line-height: 1.7;
-}
-.leading-none {
-  line-height: 1;
 }
 .text-white {
   --tw-text-opacity: 1;
@@ -1075,14 +1053,22 @@ h3,h4,h5,h6,.small-heading {
   font-size: 2rem;
 }
 
-h1, h2  {
+.sub-heading {
+font-family: var(--heading-font-sans-family);
+  font-size: 1.2rem;
+  font-weight: bold;
+  letter-spacing: 0.12em; 
+  text-transform: uppercase;
+}
+
+h1, h2,.heading  {
   font-family: var(--heading-font-serif-family);
   font-weight: 300;
   line-height: 1.2;
   text-wrap: balance;
 }
 
-h2 {
+h2,.heading {
   font-size: 1.5rem;
 }
 
@@ -1799,27 +1785,11 @@ float: right
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 @media (min-width: 640px) {
-  .sm\:grid {
-    display: grid;
-  }
   .sm\:w-1\/2 {
     width: 50%;
   }
-  .sm\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  .sm\:border-r {
-    border-right-width: 1px;
-  }
   .sm\:p-12 {
     padding: 3rem;
-  }
-  .sm\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .sm\:text-center {
-    text-align: center;
   }
 }
 @media (min-width: 768px) {
