--- a/_includes/block/contact.html
+++ b/_includes/block/contact.html
@@ -4,7 +4,7 @@
           <div class="mx-auto mb-12">
             <h2>Get in touch</h2>
           </div>
-            <form method="post" action="/success" class="mx-auto grid grid-cols-2 gap-6">
+            <form method="post" action="/success" class="mx-auto grid grid-cols-2 gap-x-16 gap-y-12">
               <div class="col-span-2">
                 <label for="question" class="uppercase">Question</label>
                 <input type="text" id="question" name="question" placeholder="I want to know about..." class="placeholder:text-inherit" required>
