--- a/_includes/block/grid-simple-2-col-overlap.html
+++ b/_includes/block/grid-simple-2-col-overlap.html
@@ -18,6 +18,9 @@
                <div class="scheme-{{block.text-column.color-scheme}} bottom-ver {% if block.desktop-image-position == 'left' %} right-side left-[20vw] {% else %}  left-side right-20vw {% endif %} absolute w-[calc(100vw_-_20vw_-_var(--side-gap))] md:w-full md:inset-0 md:relative z-10 self-end">
                 <div class="bg-base p-8">
                   {{block.text-column.block-content-html}}
+                  <p class="flex gap-6 items-center">
+                    <a href="#" class="button-featured uppercase">reserve</a> <a href="#">VIEW MORE</a>
+                  </p>
                 </div>
               </div>
             </div>
