--- a/_includes/block/experience-grid.html
+++ b/_includes/block/experience-grid.html
@@ -8,8 +8,16 @@
               <img class="absolute inset-0 h-full w-full object-cover object-center" src="{{item.image}}" alt="{{item.image-alt}}">
             </div>
 
-            <div class="flex flex-col justify-between py-8">
-              <div>
+            <div class="flex flex-col
+              {% case block.text-styles.vert-alignment %}
+              {% when 'top' %}
+              {% when 'middle' %}
+              justify-center 
+              {% when 'bottom' %}
+              justify-end
+              {% endcase %}
+            py-8">
+              <div class="mb-6">
                 <h2>{{item.heading}}</h2>
                 <p>{{item.description}}</p>
               </div>
