--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -532,9 +532,6 @@ video {
 .-order-1 {
   order: -1;
 }
-.order-3 {
-  order: 3;
-}
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -585,6 +582,9 @@ video {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
 }
 .mb-8 {
   margin-bottom: 2rem;
@@ -795,9 +795,6 @@ video {
 .gap-4 {
   gap: 1rem;
 }
-.gap-6 {
-  gap: 1.5rem;
-}
 .gap-8 {
   gap: 2rem;
 }
@@ -806,6 +803,16 @@ video {
 }
 .gap-\[12px\] {
   gap: 12px;
+}
+.gap-6 {
+  gap: 1.5rem;
+}
+.gap-x-16 {
+  -moz-column-gap: 4rem;
+       column-gap: 4rem;
+}
+.gap-y-12 {
+  row-gap: 3rem;
 }
 .self-start {
   align-self: flex-start;
@@ -1172,6 +1179,7 @@ textarea:focus, textarea:focus-within{
 .contact-form input, .contact-form textarea {
   border: 2px solid var(--text-color);
   padding: 2rem 1rem;
+  margin-bottom: 0;
 }
 
 /* editor styles for none content uses */
