--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,7 +107,7 @@
       
       <div class="text-center pt-8">
           <div style="width: 16rem;">
-            {% include svg/regent-Logo-SVG.html %}
+            {% include svg/Regent-Logo-SVG.html %}
           </div>
       </div>
       
