--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,10 +94,10 @@
 
 <body>
   <div class="scheme-header absolute w-full top-0 z-50" id="header">
-  <header class="bg-base  text-white">
+  <header class="bg-base lg:!bg-transparent text-white">
     <div class="max-width flex justify-center items-center py-4 relative z-[999]">
       
-      <div class="">
+      <div class="lg:hidden">
         <div class="burger-button">
           <span class="burger-top"></span>
           <span class="burger-middle"></span>
@@ -115,7 +115,7 @@
 
 
     </div>
-    <!-- <nav class="max-width justify-between hidden lg:flex right-0 top-0 shrink-0">
+    <nav class="max-width justify-between hidden lg:flex right-0 top-0 shrink-0">
 
       {% assign noH1 = true %}
       {% for link in site.data.navigation.header_links %}
@@ -147,9 +147,9 @@
       </span>
       {% endfor %}
 
-      </nav> -->
+      </nav>
       
-       <div class="burger-menu color-set">
+       <div class="burger-menu color-set lg:!hidden">
 
         <!-- <a href="/">
           <img class="mix-blend-multiply" style="max-width: min({{site.data.navigation.header_logo_width}}, 100%)" src="{{site.data.navigation.logo_image}}" alt="{{site.data.navigation.logo_alt}}">
