--- a/style.css
+++ b/style.css
@@ -649,6 +649,56 @@ float: right
 
   /* slider */
 
+  /* split banner slider */
+
+.split-banner-slider.left .slide {
+          width: 80%;
+          height: 80%;
+          top: 10%;
+          left: -90%;transition: all 0.5s ease;
+      }
+
+      .split-banner-slider.left .slide.active {
+          left: 0;
+          top:0;
+          width: 100%;
+          height: 100%;
+      }
+        .split-banner-slider.right .slide {
+          width: 80%;
+          height: 80%;
+          top: 10%;
+          left: 110%;
+          transition: all 0.5s ease;
+      }
+
+      .split-banner-slider.right .slide.active {
+          left: 0;
+          top:0;
+          width: 100%;
+          height: 100%;
+      }
+
+
+      .line {
+        transition: all 0.3s ease;
+      }
+
+      .line {
+        background-color: var(--text-color);
+        transition: all 0.4s ease;
+        opacity: .3;
+        height: 4px;
+        width: 28px;
+        border-radius: 100rem;
+      }
+      .line.filledIn {
+        opacity: 1;
+      
+      }
+
+  /* slick-slider */
+
   body .slick-prev, body .slick-next {
     top: initial;
     bottom: -90px;
