--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -813,6 +813,12 @@ video {
 .gap-\[12px\] {
   gap: 12px;
 }
+.gap-1 {
+  gap: 0.25rem;
+}
+.gap-0 {
+  gap: 0px;
+}
 .gap-x-16 {
   -moz-column-gap: 4rem;
        column-gap: 4rem;
@@ -909,6 +915,9 @@ video {
 .p-small {
   padding: var(--small-padding);
 }
+.p-3 {
+  padding: 0.75rem;
+}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -948,6 +957,10 @@ video {
 .py-vert {
   padding-top: var(--vert-gap);
   padding-bottom: var(--vert-gap);
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1703,6 +1716,7 @@ float: right
 
       .line {
         transition: all 0.3s ease;
+        display: block;
         background-color: var(--text-color);
         transition: all 0.4s ease;
         opacity: .3;
