--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -547,6 +547,9 @@ video {
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
+.col-span-7 {
+  grid-column: span 7 / span 7;
+}
 .row-span-2 {
   grid-row: span 2 / span 2;
 }
@@ -655,6 +658,9 @@ video {
 .flex {
   display: flex;
 }
+.table {
+  display: table;
+}
 .grid {
   display: grid;
 }
@@ -747,6 +753,9 @@ video {
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -789,6 +798,9 @@ video {
 .justify-stretch {
   justify-content: stretch;
 }
+.gap-0 {
+  gap: 0px;
+}
 .gap-12 {
   gap: 3rem;
 }
@@ -812,12 +824,6 @@ video {
 }
 .gap-\[12px\] {
   gap: 12px;
-}
-.gap-1 {
-  gap: 0.25rem;
-}
-.gap-0 {
-  gap: 0px;
 }
 .gap-x-16 {
   -moz-column-gap: 4rem;
@@ -915,12 +921,13 @@ video {
 .p-small {
   padding: var(--small-padding);
 }
-.p-3 {
-  padding: 0.75rem;
-}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 .px-5 {
   padding-left: 1.25rem;
@@ -957,10 +964,6 @@ video {
 .py-vert {
   padding-top: var(--vert-gap);
   padding-bottom: var(--vert-gap);
-}
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
 }
 .pb-0 {
   padding-bottom: 0px;
@@ -1047,6 +1050,14 @@ video {
 }
 
 img{ max-width: 100%; height:auto;}
+
+img.bg-cover-image{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
 
 html {
   scroll-padding-top: 107px;
