--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@
 
 img{ max-width: 100%; height:auto;}
 
+img.bg-cover-image{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
 html {
   scroll-padding-top: 107px;
 }
