--- a/_includes/block/grid-links.html
+++ b/_includes/block/grid-links.html
@@ -13,10 +13,10 @@
             <h2>
               {{block.heading}}
             </h2>
-            <div class="grid" style="grid-template-columns: repeat({{block.column-count}});">
+            <div class="grid" style="grid-template-columns: repeat({{block.column-count}}, 1rf);">
               {% for link in block.buttons %}
               <div>
-                <a href="{{link.url}}" class="button-featured" {%if link.external-link = true %} target="_blank" {% endif %} {%if link.download = true %} download="" {% endif %}>{{link.text}}</a>
+                <a href="{{link.url}}" class="button-featured" {% if link.external-link == true %} target="_blank" {% endif %} {% if link.download == true %} download="" {% endif %}>{{link.text}}</a>
               </div>
               {% endfor %}
             </div>
